可以编辑试题了

--- a/src/main/resources/templates/paperEdit.html
+++ b/src/main/resources/templates/paperEdit.html
@@ -81,7 +81,7 @@
                             <div class="panel-body" id="primaryPaperInfo">
                                 <div class="form-group">
                                     <label for="paperTitle" class="control-label">试题名称</label>
-                                    <input type="text" class="form-control" name="paperName" placeholder="paperName">
+                                    <input type="text" class="form-control" name="paperName" placeholder="paperName"/>
                                 </div>
                                 <div class="form-group">
                                     <label for="paperStart" class=" control-label">发布时间
@@ -110,10 +110,6 @@
                         </div>
                     </div>
                     <div class="paper-panel">
-                        <div class="containerType1"></div>
-                        <div class="containerType2"></div>
-                        <div class="containerType3"></div>
-                        <div class="containerType4"></div>
                     </div>
                 </div>
             </div>
@@ -154,31 +150,31 @@
                     <div class="form-group">
                         <label for="" class="col-sm-2 control-label">题目</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" name='questionTitle' placeholder="Title">
+                            <textarea type="text" class="form-control" name='questionTitle' placeholder="Title"></textarea>
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="" class="col-sm-2 control-label">选项A</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" name='questionTitle' placeholder="选项A">
+                            <input type="text" class="form-control" name='questionTitle' placeholder="选项A"/>
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="" class="col-sm-2 control-label">选项B</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" name='questionTitle' placeholder="选项B">
+                            <input type="text" class="form-control" name='questionTitle' placeholder="选项B"/>
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="" class="col-sm-2 control-label">选项C</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" name='questionTitle' placeholder="选项C ">
+                            <input type="text" class="form-control" name='questionTitle' placeholder="选项C "/>
                         </div>
                     </div>
                     <div class="form-group ">
                         <label for=" " class="col-sm-2 control-label ">选项D</label>
                         <div class="col-sm-10 ">
-                            <input type="text " class="form-control " name='questionTitle' placeholder="选项D ">
+                            <input type="text " class="form-control " name='questionTitle' placeholder="选项D "/>
                         </div>
                     </div>
                     <div class="form-group ">
@@ -195,7 +191,7 @@
                     <div class="form-group ">
                         <label for="questionScore " class="col-sm-2 control-label ">分值</label>
                         <div class="col-sm-10 ">
-                            <input type="number" class="form-control " name='questionScore' placeholder="Score ">
+                            <input type="number" class="form-control " name='questionScore' placeholder="Score "/>
                         </div>
                     </div>
                 </form>
@@ -222,7 +218,7 @@
                     <div class="form-group ">
                         <label for=" " class="col-sm-2 control-label ">题目</label>
                         <div class="col-sm-10 ">
-                            <input type="text " class="form-control" name='questionTitle' placeholder="Title ">
+                            <textarea type="text" class="form-control" name='questionTitle' placeholder="Title"></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
@@ -237,7 +233,7 @@
                     <div class="form-group ">
                         <label for=" " class="col-sm-2 control-label ">分值</label>
                         <div class="col-sm-10 ">
-                            <input type="number " class="form-control " name="questionScore" placeholder="Score ">
+                            <input type="number " class="form-control " name="questionScore" placeholder="Score "/>
                         </div>
                     </div>
                 </form>
@@ -264,19 +260,19 @@
                     <div class="form-group ">
                         <label for=" " class="col-sm-2 control-label ">题目</label>
                         <div class="col-sm-10 ">
-                            <input type="text " class="form-control " name='questionTitle' placeholder="Title ">
+                            <textarea type="text" class="form-control" name='questionTitle' placeholder="Title"></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
                         <label for=" " class="col-sm-2 control-label ">答案</label>
                         <div class="col-sm-10 ">
-                            <input type=" " class="form-control " name='questionAnswer' placeholder="Answer ">
+                            <input type=" " class="form-control " name='questionAnswer' placeholder="Answer "/>
                         </div>
                     </div>
                     <div class="form-group ">
                         <label for=" " class="col-sm-2 control-label ">分值</label>
                         <div class="col-sm-10 ">
-                            <input type="number " class="form-control " name='questionScore' placeholder="Score ">
+                            <input type="number " class="form-control " name='questionScore' placeholder="Score "/>
                         </div>
                     </div>
                 </form>
@@ -303,19 +299,19 @@
                     <div class="form-group ">
                         <label for=" " class="col-sm-2 control-label ">题目</label>
                         <div class="col-sm-10 ">
-                            <input type="text " class="form-control " name='questionTitle' placeholder="Title ">
+                            <textarea type="text" class="form-control" name='questionTitle' placeholder="Title"></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
                         <label for=" " class="col-sm-2 control-label ">答案</label>
                         <div class="col-sm-10 ">
-                            <input type="password " class="form-control " name='questionAnswer' placeholder="Answer ">
+                            <input type="password " class="form-control " name='questionAnswer' placeholder="Answer "/>
                         </div>
                     </div>
                     <div class="form-group ">
                         <label for=" " class="col-sm-2 control-label ">分值</label>
                         <div class="col-sm-10 ">
-                            <input type="number " class="form-control " name='questionScore' placeholder="Score ">
+                            <input type="number " class="form-control " name='questionScore' placeholder="Score "/>
                         </div>
                     </div>
                 </form>
